2009-01-02 Riccardo Mottola <rmottola@users.sf.net>

	* main.m
	* PBPbxNativeTarget.m, PBPbxProject.m, PBDevelopmentHelper.m, PBMakefileGenerator.m
	Removed c-99isms

2008-11-12 01:49-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* main.m: Copy headers only from target directories.  

2008-11-10 19:14-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* main.m: Copy all headers since many xcode projects
	don't include the headers in the project itself.  
	Also copy the resources.
	* PBMakefileGenerator.m: Minor cleanup

2008-11-02 21:45-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* cmdline.c
	* cmdline.h
	* main.m
	* optionsparser.ggo: Add option to use symbolic links instead
	of copying the files.

2008-10-26 21:00-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* main.m: Copy only those files needed for each target instead
	of linking ALL of the files in each directory. 

2008-10-24 21:44-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* PBMakefileGenerator.m: Remove warning.
	* PBProjectGenerator.m: Fix issue adding nil to dictionary

2008-10-16 02:03-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* PBProjectGenerator.h
	* PBProjectGenerator.m: Added class to handle generation of the
	PC.project file.

2008-10-16 02:02-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* GNUmakefile
	* main.m
	* PBMakefileGenerator.m: Added code to generate PC.project file.

2008-10-12 21:46-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* PBMakefileGenerator.m: Add QuartzCore to the list of excluded 
	libraries.

2008-10-12 21:43-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* main.m
	* PBMakefileGenerator.m
	* PBPbxNativeTarget.h
	* PBPbxNativeTarget.m: Create source sections based on metadata in
	the pbxproj file rather than by file extentions.

2008-10-12 18:26-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* PBMakefileGenerator.m: Automatically generate library/framework